<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.notekeeping.NoteActivity">
    <item
        android:id="@+id/action_next"
        android:icon="@android:drawable/ic_media_next"
        android:orderInCategory="100"
        android:title="@string/next"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/cancel"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_send_email"
        android:orderInCategory="103"
        android:title="@string/menu_mail"
        app:showAsAction="never" />
</menu>
